--- a/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
+++ b/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
@@ -65,7 +65,7 @@
               >Noten erfassen</a
             >
             <a class="dropdown-item" [routerLink]="['/rechnungsbuero', 'check']"
-              >Noten check</a
+              >Noten überprüfen</a
             >
             <a
               class="dropdown-item"
