--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/row/erfassen-row.component.css
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/row/erfassen-row.component.css
@@ -4,6 +4,12 @@ mat-form-field {
 .label {
   color: var(--ztv-black);
   padding-top: 0.3em;
+  position: relative;
+  top: 5px;
+}
+.note {
+  font-weight: 500;
+  padding-left: 0.3em;
 }
 .data {
   color: var(--ztv-black);
@@ -33,4 +39,42 @@ mat-form-field {
 
 Input {
   background-color: var(--ztv-white);
+}
+.show_note {
+  min-width: 35px;
+  position: relative;
+  top: 5px;
+  color: var(--ztv-light-black);
+  text-align: right;
+  float: right;
+  padding-right: 2px;
+}
+.show_note_error {
+  min-width: 35px;
+  position: relative;
+  top: 5px;
+  font-weight: 600;
+  color: var(--ztv-light-black);
+  text-align: right;
+  float: right;
+  padding-right: 2px;
+}
+.hide_note {
+  min-width: 35px;
+  position: relative;
+  top: 5px;
+  color: var(--ztv-lighter-gray);
+}
+.mat-raised-button {
+  background-color: var(--ztv-lighter-gray);
+  width: auto;
+  height: 30px;
+  line-height: 30px;
+}
+.material-icons.color_gray {
+  color: rgba(0, 0, 0, 0.54);
+}
+.deleted {
+  line-height: 15px;
+  background-color: var(--ztv-light-red);
 }
