--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/header/erfassen-header.component.html
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/header/erfassen-header.component.html
@@ -11,4 +11,8 @@
   <div class="col data">
     {{ laufliste.anlage.substring(laufliste.anlage.indexOf("_") + 1) }}
   </div>
+  <div class="col label">Wechsel</div>
+  <div class="col data">
+    {{ laufliste.abloesung }}
+  </div>
 </ng-container>
