--- a/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
+++ b/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
@@ -74,7 +74,7 @@
             >
             <a
               class="dropdown-item"
-              [routerLink]="['/rechnungsbuero/ranglisten', organisator.id]"
+              [routerLink]="['/rechnungsbuero', organisator.id, 'ranglisten']"
               >Ranglisten</a
             >
           </div>
