--- a/anmeldetool-web/src/main/web/src/styles.css
+++ b/anmeldetool-web/src/main/web/src/styles.css
@@ -85,7 +85,10 @@
   max-height: 20px;
   margin: 2px 2px 2px 2px;
 }
-
+.mediumNoMarginIcon {
+  max-width: 20px;
+  max-height: 20px;
+}
 .smallIcon {
   max-width: 15px;
   max-height: 15px;
