--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/rechnungsbuero/header/ranglisten-header.component.html
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/rechnungsbuero/header/ranglisten-header.component.html
@@ -11,6 +11,7 @@
   <div class="col-base col-1">Sprung 2</div>
   <div class="col-base col-1">Zählbar</div>
   <div class="col-base col-1">Barren</div>
+  <div class="col-base col-1">Total</div>
   <div class="col-base col-1 right">Rang</div>
   <div class="col-base col-2">Auszeichnung</div>
 </div>
