--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/rechnungsbuero/rechnungsbuero.component.html
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/rechnungsbuero/rechnungsbuero.component.html
@@ -3,14 +3,83 @@
     <h1>{{ anlass.getCleaned() }}</h1>
   </div>
   <div class="row">
-    <mat-slider
-      min="0"
-      [max]="anzahl"
-      [(ngModel)]="maxAuszeichnungen"
-      thumbLabel
-      tickInterval="1"
-      (change)="sliderChanged($event)"
-    ></mat-slider>
+    <div class="col-sm-1">
+      <mat-form-field appearance="fill">
+        <mat-label>Kategorie</mat-label>
+        <mat-select
+          (selectionChange)="kategorieSelected($event)"
+          [value]="kategorie"
+        >
+          <mat-option
+            *ngFor="let kategorie of getKategorienRaw(anlass)"
+            [value]="kategorie"
+            >{{ kategorie }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-sm-1">
+      <mat-form-field appearance="fill">
+        <mat-label>Geschlecht</mat-label>
+        <mat-select
+          (selectionChange)="tiTuSelected($event)"
+          [disabled]="!isAlle()"
+          [value]="tiTu"
+        >
+          <mat-option value="Ti">Ti</mat-option>
+          <mat-option value="Tu">Tu</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-md-7">
+      <mat-slider
+        min="0"
+        [max]="anzahl"
+        [(ngModel)]="maxAuszeichnungen"
+        thumbLabel
+        tickInterval="1"
+        (change)="sliderChanged($event)"
+      ></mat-slider>
+    </div>
+    <div class="col-sm-1">
+      <button
+        mat-button
+        type="button"
+        color="primary"
+        aria-label="Rangliste als PDF"
+        (click)="getRanglistePdf()"
+        [disabled]="!filterOk"
+        tabindex="-1"
+      >
+        PDF generieren
+      </button>
+    </div>
+    <div class="col-sm-1">
+      <button
+        mat-button
+        type="button"
+        color="primary"
+        aria-label="Rangliste als PDF per Verein"
+        (click)="getRanglistePdfPerVerein()"
+        [disabled]="!filterOk"
+        tabindex="-1"
+      >
+        Vereins Rangliste
+      </button>
+    </div>
+    <div class="col-sm-1">
+      <button
+        mat-button
+        type="button"
+        color="primary"
+        aria-label="Teamwertung"
+        (click)="getTeamwertung()"
+        [disabled]="!filterOk"
+        tabindex="-1"
+      >
+        Teamwertung
+      </button>
+    </div>
   </div>
   <app-ranglisten-header></app-ranglisten-header>
   <app-ranglisten-entry
