Lauflisten und Rangliste für Ti, Autocomplete Vereinsliste

--- a/anmeldetool-web/src/main/web/src/app/events/event-admin/event-admin.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-admin/event-admin.component.html
@@ -1,7 +1,7 @@
-<div class="container" *ngIf="administrator">
+<div class="container-lg" *ngIf="administrator">
   <div class="row">
     <div class="col-9">
-      <h1>{{ anlass.getCleaned() }}</h1>
+      <h1>{{ anlass.getCleaned() + " " + anlass.ort }}</h1>
     </div>
     <div class="col-sm-3">
       <h1>{{ anlass.tiTu }}</h1>
@@ -93,88 +93,100 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-3">
+    <div class="col-2">
       <h2>Lauflisten</h2>
     </div>
-    <div class="col-1">
-      <mat-form-field appearance="fill">
-        <mat-label>Kategorie</mat-label>
-        <mat-select
-          type="text"
-          placeholder="-"
-          aria-label="Kategorie"
-          matInput
-          (ngModelChange)="changeKategorie($event)"
-          [ngModel]="selectedKategorie"
-        >
-          <mat-option *ngFor="let option of kategorien" [value]="option">
-            {{ option }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
+    <div class="col-10">
+      <div class="row">
+        <div class="col-2">
+          <mat-form-field appearance="fill">
+            <mat-label>Kategorie</mat-label>
+            <mat-select
+              type="text"
+              placeholder="-"
+              aria-label="Kategorie"
+              matInput
+              (ngModelChange)="changeKategorie($event)"
+              [ngModel]="selectedKategorie"
+            >
+              <mat-option *ngFor="let option of kategorien" [value]="option">
+                {{ option }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
 
-    <div class="col-2">
-      <mat-form-field appearance="fill">
-        <mat-label>Abteilung</mat-label>
-        <mat-select
-          type="text"
-          placeholder="-"
-          aria-label="Abteilung"
-          matInput
-          (ngModelChange)="changeAbteilung($event)"
-          [ngModel]="selectedAbteilung"
-        >
-          <mat-option *ngFor="let option of abteilungen" [value]="option">
-            {{ option }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div class="col-2">
-      <mat-form-field appearance="fill">
-        <mat-label>Anlage</mat-label>
-        <mat-select
-          type="text"
-          placeholder="-"
-          aria-label="Anlage"
-          matInput
-          (ngModelChange)="changeAnlage($event)"
-          [ngModel]="selectedAnlage"
-        >
-          <mat-option *ngFor="let option of anlagen" [value]="option">
-            {{ option }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div class="col-sm-2">
-      <button
-        mat-button
-        color="primary"
-        #tooltip="matTooltip"
-        matTooltip="Lauflisten löschen"
-        matTooltipPosition="below"
-        matTooltipHideDelay="500"
-        (click)="lauflistenLoeschen()"
-        [disabled]="isButtonsDisabled"
-      >
-        Lauflisten löschen
-      </button>
-    </div>
-    <div class="col-sm-2">
-      <button
-        mat-button
-        color="primary"
-        #tooltip="matTooltip"
-        matTooltip="Lauflisten als PDF"
-        matTooltipPosition="below"
-        matTooltipHideDelay="500"
-        (click)="lauflistenPDF()"
-        [disabled]="isButtonsDisabled"
-      >
-        Lauflisten PDF
-      </button>
+        <div class="col-3">
+          <mat-form-field appearance="fill">
+            <mat-label>Abteilung</mat-label>
+            <mat-select
+              type="text"
+              placeholder="-"
+              aria-label="Abteilung"
+              matInput
+              (ngModelChange)="changeAbteilung($event)"
+              [ngModel]="selectedAbteilung"
+            >
+              <mat-option *ngFor="let option of abteilungen" [value]="option">
+                {{ option }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-2">
+          <mat-form-field appearance="fill">
+            <mat-label>Anlage</mat-label>
+            <mat-select
+              type="text"
+              placeholder="-"
+              aria-label="Anlage"
+              matInput
+              (ngModelChange)="changeAnlage($event)"
+              [ngModel]="selectedAnlage"
+            >
+              <mat-option *ngFor="let option of anlagen" [value]="option">
+                {{ option }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-sm-2">
+          <button
+            mat-button
+            color="primary"
+            #tooltip="matTooltip"
+            matTooltip="Lauflisten löschen"
+            matTooltipPosition="below"
+            matTooltipHideDelay="500"
+            (click)="lauflistenLoeschen()"
+            [disabled]="isButtonsDisabled"
+          >
+            Lauflisten löschen
+          </button>
+        </div>
+        <div class="col-sm-1 move-checkbox">
+          <mat-checkbox
+            *ngIf="hideOnlyTi"
+            [(ngModel)]="onlyTi"
+            [disabled]="isButtonsDisabled"
+            >nur Ti
+          </mat-checkbox>
+        </div>
+        <div class="col-sm-2">
+          <button
+            mat-button
+            color="primary"
+            #tooltip="matTooltip"
+            matTooltip="Lauflisten als PDF"
+            matTooltipPosition="below"
+            matTooltipHideDelay="500"
+            (click)="lauflistenPDF()"
+            [disabled]="isButtonsDisabled"
+          >
+            Lauflisten PDF
+          </button>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row" *ngIf="message">
