--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/rechnungsbuero/rechnungsbuero.component.html
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/rechnungsbuero/rechnungsbuero.component.html
@@ -81,7 +81,7 @@
       </button>
     </div>
   </div>
-  <app-ranglisten-header></app-ranglisten-header>
+  <app-ranglisten-header [isTi]="anlass.tiAnlass"></app-ranglisten-header>
   <app-ranglisten-entry
     [anlass]="anlass"
     [entry]="entry"
