--- a/anmeldetool-web/src/main/web/src/app/verein/login/login-dialog.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/login/login-dialog.component.html
@@ -5,12 +5,25 @@
     <p>
       <mat-form-field [appearance]="appearance">
         <mat-label>Verein</mat-label>
-        <mat-select [formControl]="vwVereinControl">
+        <input
+          matInput
+          type="text"
+          [formControl]="vwVereinControl"
+          [matAutocomplete]="auto"
+        />
+        <mat-autocomplete
+          autoActiveFirstOption
+          #auto="matAutocomplete"
+          [displayWith]="displayFn"
+        >
           <mat-option value=""></mat-option>
-          <mat-option *ngFor="let verein of vereine" [value]="verein">
+          <mat-option
+            *ngFor="let verein of filteredOptions | async"
+            [value]="verein"
+          >
             {{ verein.name }}
           </mat-option>
-        </mat-select>
+        </mat-autocomplete>
         <mat-error *ngIf="vwUserNameControl.hasError('required')">
           Pflichtfeld
         </mat-error>
