--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-chip.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-chip.component.html
@@ -37,6 +37,7 @@
           [einsatz]="getEinsatzForSlot(slot)"
           [anlass]="anlass"
           (wrEinsatzChange)="wrEinsatzChange($event)"
+          [egalIsAktiv]="egalIsAktiv(slot)"
         >
         </app-wertungsrichter-slot>
         <mat-form-field
