--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/row/erfassen-row.component.css
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/row/erfassen-row.component.css
@@ -70,6 +70,7 @@ Input {
   width: auto;
   height: 30px;
   line-height: 30px;
+  min-width: 50px;
 }
 .material-icons.color_gray {
   color: rgba(0, 0, 0, 0.54);
@@ -77,4 +78,14 @@ Input {
 .deleted {
   line-height: 15px;
   background-color: var(--ztv-light-red);
+  position: relative;
+  right: 12px;
+  padding: 0px;
+}
+.small-button {
+  max-width: 24px;
+  min-width: 24px;
+  padding: 0px;
+  position: relative;
+  right: -8px;
 }
