--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.css
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.css
@@ -33,6 +33,14 @@
 .mat-row {
   min-height: 30px;
 }
+.mat-row:nth-child(even) {
+  background-color: var(--ztv-lighter-gray);
+}
+
+.mat-row:nth-child(odd) {
+  background-color: white;
+}
+
 mat-header-cell {
   min-height: 120px;
   max-height: 120px;
